--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,9 @@
 
 	1.   General Styles
 	1.1  Links
-	1.2  Container
-    1.3  Clearfix
+    1.2  Container
+    1.3  Grid
+    1.4  Clearfix
     2.   Main Header
     2.1  Logo
     2.2  Navigation
@@ -48,6 +49,7 @@ p {
     font-size: 1em;
 }
 
+
 /*
   ========================================
   1.1 Links
@@ -83,9 +85,38 @@ a:hover {
     width: 960px;
 }
 
+
 /*
   ========================================
-  1.3 Clearfix
+  1.3 Grid
+  ========================================
+*/
+
+.grid {
+    margin: 0 auto;
+    width: 960px;
+    padding-bottom: 40px;
+}
+
+.col-1-3,
+.col-2-3 {
+margin-right: 0;
+margin-bottom: 58px;
+display: inline-block;
+vertical-align: top;
+}
+
+.col-1-3 {
+width: 33.33%;
+}
+.col-2-3 {
+width: 66.66%;
+}
+
+
+/*
+  ========================================
+  1.4 Clearfix
   ========================================
 */
 
@@ -230,6 +261,7 @@ li .active {
   ========================================
 */
 
+
 .primary-footer {
     position: fixed;
     height: 60px;
@@ -280,6 +312,36 @@ img {
   ========================================
 */
 
+.img-wrap {
+    width: 280px;
+    height: 210px;
+    padding: 0px;
+    position: relative;
+}
+.img-wrap img {
+    height: 100%;
+    width: 100%;
+}
+
+.img-wrap img:hover {
+	transform: scale(1.1);
+}
+
+.img-caption{
+    background-color: #4aaaa5;
+    width: 100%;
+    height: 60px;
+    bottom: 10px;
+    left: 0;
+    opacity: 0.9;
+    position: absolute;
+    text-align: center;
+    line-height: 60px;
+}
+.img-caption h3{
+    font-size: 24px;
+    color: #fff;
+}
 
 /*
   ========================================
